--- a/SystemProgramming_FinalTask_2/Views/UserControls/ModeSelectionUC.xaml
+++ b/SystemProgramming_FinalTask_2/Views/UserControls/ModeSelectionUC.xaml
@@ -4,25 +4,54 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SystemProgramming_FinalTask_2.Views.UserControls"
+             xmlns:viewmodels="clr-namespace:SystemProgramming_FinalTask_2.ViewModels"
              mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="400">
+             d:DesignHeight="150" d:DesignWidth="400"
+             Height="150" Width="400">
     <UserControl.Resources>
-        <Style x:Key="ButtonStyle2" TargetType="{x:Type Button}">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding IsSelected}" Value="True">
-                    <Setter  Property="Background" Value="Red"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding IsSelected}" Value="False">
-                    <Setter Property="Background" Value="Blue"/>
-                </DataTrigger>
-            </Style.Triggers>
+        <LinearGradientBrush x:Key="MouseOver_GradientEffect" EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="#FF5BB75B" Offset="0" />
+            <GradientStop Color="#FF398239" Offset="1" />
+        </LinearGradientBrush>
+        <Style TargetType="{x:Type Button}">
+
+            <Setter Property="FontSize" Value="11" />
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Name="ButtonBorder" CornerRadius="2" BorderBrush="#387f38" BorderThickness="1">
+                            <Border.Background>
+                                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                    <GradientStop Color="#FF5BB75B" Offset="0" />
+                                    <GradientStop Color="#FF449B44" Offset="1" />
+                                </LinearGradientBrush>
+                            </Border.Background>
+                            <ContentPresenter x:Name="ButtonContentPresenter" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="ButtonBorder" Property="Background" Value="{StaticResource MouseOver_GradientEffect}" />
+                                <Setter Property="Cursor" Value="Hand" />
+                                <Setter Property="Foreground" Value="LightGray"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
     </UserControl.Resources>
-    <Border Padding="10" BorderBrush="Black" Background="#1C2826" BorderThickness="3">
+    <Border Padding="10" BorderBrush="Black" BorderThickness="3" CornerRadius="10">
+        <Border.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FF5BB75B" Offset="0" />
+                <GradientStop Color="#FF398239" Offset="1" />
+            </LinearGradientBrush>
+        </Border.Background>
         <StackPanel Orientation="Horizontal" Background="GhostWhite">
-            <Button Margin="12 40" Width="100" Background="#F23A49"/>
-            <Button Margin="12 40" Width="100" Background="#F23A49"/>
-            <Button Margin="12 40" Width="100" Background="#F23A49"/>
+            <Button Margin="12 40" Width="100" Background="#F23A49" FontSize="18" Command="{Binding ModeSelectionUCBtnClick}" CommandParameter="1">➊ Mode</Button>
+            <Button Margin="12 40" Width="100" Background="#F23A49" FontSize="18" Command="{Binding ModeSelectionUCBtnClick}" CommandParameter="2">➋ Mode</Button>
+            <Button Margin="12 40" Width="100" Background="#F23A49" FontSize="18" Command="{Binding ModeSelectionUCBtnClick}" CommandParameter="3">➌ Mode</Button>
         </StackPanel>
     </Border>
 </UserControl>
